<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardAct">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_splash"
        android:src="@drawable/splash_bg"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settingIc"
        app:layout_constraintBottom_toBottomOf="@id/settingIc"
        app:layout_constraintTop_toTopOf="@id/settingIc"
        android:textColor="@color/common_color"
        app:layout_constraintHorizontal_bias="0.6"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/poppins_semibold"
        />

    <ImageView
        android:id="@+id/settingIc"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/setting_ic"
        android:scaleType="fitXY"
        android:elevation="2dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.05"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/genderMale"
        android:layout_width="154dp"
        android:layout_height="164dp"
        app:cardCornerRadius="30dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/card_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingIc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.1"
        app:cardBackgroundColor="@color/common_color"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/male_card"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:src="@drawable/male_image"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                />

            <TextView
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/male_card"
                app:layout_constraintStart_toStartOf="@id/male_card"
                app:layout_constraintTop_toBottomOf="@id/male_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/genderFemale"
        android:layout_width="154dp"
        android:layout_height="164dp"
        app:layout_constraintStart_toEndOf="@id/genderMale"
        app:layout_constraintTop_toBottomOf="@id/settingIc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:cardCornerRadius="30dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/card_color"
        app:cardBackgroundColor="@color/card_color"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/female_card"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:src="@drawable/female_image"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                />

            <TextView
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/female"
                android:textColor="@color/common_color_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/female_card"
                app:layout_constraintStart_toStartOf="@id/female_card"
                app:layout_constraintTop_toBottomOf="@id/female_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


<!--    weight layout-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightUnit"
        android:layout_width="154dp"
        android:layout_height="65dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/common_color"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/genderMale"
        app:layout_constraintStart_toStartOf="@id/genderMale"
        app:layout_constraintEnd_toEndOf="@id/genderMale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.09">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightValueView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:hint="@string/weight"
            android:text="@string/_34"
            android:fontFamily="@font/poppins_medium"
            android:textSize="24sp"
            android:textColor="@color/cardview_dark_background"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    weight unit layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weightUnitLayout"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/genderFemale"
        app:layout_constraintTop_toTopOf="@+id/weightUnit"
        app:layout_constraintEnd_toEndOf="@id/genderFemale"
        app:layout_constraintBottom_toBottomOf="@id/weightUnit"
        android:background="@drawable/bg_white"

        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"

            >
            <TextView
                android:id="@+id/kgTextView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/kg"
                android:fontFamily="@font/poppins_bold_italic"
                android:textSize="24sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="@dimen/_10sdp"

                />

            <TextView
                android:id="@+id/libsTextView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_common"
                android:fontFamily="@font/poppins_bold_italic"
                android:gravity="center"
                android:text="@string/libs"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    height layout-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightUnit"
        android:layout_width="154dp"
        android:layout_height="65dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/common_color"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/weightUnit"
        app:layout_constraintStart_toStartOf="@id/weightUnit"
        app:layout_constraintEnd_toEndOf="@id/weightUnit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightValueView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:hint="@string/height"
            android:text="5.7"
            android:fontFamily="@font/poppins_medium"
            android:textSize="24sp"
            android:textColor="@color/cardview_dark_background"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    weight unit layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heightUnitLayout"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/weightUnitLayout"
        app:layout_constraintTop_toTopOf="@id/heightUnit"
        app:layout_constraintEnd_toEndOf="@id/weightUnitLayout"
        app:layout_constraintBottom_toBottomOf="@id/heightUnit"
        android:background="@drawable/bg_white"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center"

            >
            <TextView
                android:id="@+id/ftTextView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/ft"
                android:fontFamily="@font/poppins_bold_italic"
                android:background="@drawable/bg_common"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="@dimen/_10sdp"

                />

            <TextView
                android:id="@+id/cmTextView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"

                android:fontFamily="@font/poppins_bold_italic"
                android:gravity="center"
                android:text="@string/cm"
                android:textColor="@color/common_color_light"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    Age-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/common_color"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusTopStart="50dp"
        android:gravity="center"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusBottomEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/heightUnitLayout"
        app:layout_constraintStart_toStartOf="@id/heightUnit"
        app:layout_constraintEnd_toEndOf="@id/heightUnitLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageValueView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:hint="@string/age"
            android:text="@string/_20"
            android:fontFamily="@font/poppins_medium"
            android:textSize="24sp"
            android:textColor="@color/cardview_dark_background"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/nextBtn"
        style="@style/CommonButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="@id/age"
        app:layout_constraintEnd_toEndOf="@id/age"
        app:layout_constraintBottom_toBottomOf="parent"

        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/bottom_navigation_bg"
        app:cardCornerRadius="50dp"
        android:layout_margin="10dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/bottom_navigation_corner"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:showDividers="middle"
            android:divider="@drawable/h_spacing_16"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bmrCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="33dp"
                app:strokeWidth="0dp"
                >

            <ImageView
                android:id="@+id/bmr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bmr_ic"
                />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bmiCard"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/common_color"
                app:cardCornerRadius="33dp"
                >

            <ImageView
                android:id="@+id/bmi"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/bmi_without_bg_ic"
                android:layout_gravity="center"
                />
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/blogCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="33dp"
                app:strokeWidth="0dp"
                >
            <ImageView
                android:id="@+id/blog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/blog_ic"
                />
            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>